Fixed Card Issues
- Changed the card spacing so they are centered in the viewport
- Changed the layout so the cards don't overlap on smaller screens

--- a/css/base-styles.css
+++ b/css/base-styles.css
@@ -218,3 +218,8 @@ body {
 }
 
 * {  box-sizing: border-box;}
+
+.card {
+    max-width: 450px;
+    margin: 0 auto;
+}
